...
        <Button
          testID={testIds.receiptPrint}
          fullWidth
          disabled={!txId}
          onPress={() => void onPrint()}
          accessibilityLabel={
            Platform.OS === 'ios' ? t('receipt.airPrint') : t('receipt.print')
          }>
          {Platform.OS === 'ios' ? t('receipt.airPrint') : t('receipt.print')}
        </Button>
        {showWhatsApp ? (
          <Button
            fullWidth
...
